--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@supabase/ssr": "0.4.0",
     "@supabase/supabase-js": "2.45.4",
+    "mammoth": "^1.6.0",
     "next": "14.2.10",
     "openai": "4.57.0",
     "pdf-parse": "1.1.1",
+    "pdfkit": "^0.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sharp": "^0.33.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
