--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "14.2.10",
     "openai": "4.57.0",
     "pdf-parse": "1.1.1",
-    "pdfkit": "^0.15.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sharp": "^0.33.2",
